--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,20 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Map_Main_Menu.Map_Main_Menu
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Map_Main_Menu.Map_Main_Menu
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Monopoly_Normand.Monopoly_NormandGameMode
-GlobalDefaultServerGameMode=None
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_12
+GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -24,13 +11,8 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Puzzle",NewGameName="/Script/Monopoly_Normand")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Puzzle",NewGameName="/Script/Monopoly_Normand")
-+ActiveClassRedirects=(OldClassName="TP_PuzzlePlayerController",NewClassName="Monopoly_NormandPlayerController")
-+ActiveClassRedirects=(OldClassName="TP_PuzzlePawn",NewClassName="Monopoly_NormandPawn")
-+ActiveClassRedirects=(OldClassName="TP_PuzzleGameMode",NewClassName="Monopoly_NormandGameMode")
-+ActiveClassRedirects=(OldClassName="TP_PuzzleBlockGrid",NewClassName="Monopoly_NormandBlockGrid")
-+ActiveClassRedirects=(OldClassName="TP_PuzzleBlock",NewClassName="Monopoly_NormandBlock")
++ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Monopoly_Normand")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Monopoly_Normand")
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
