--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Monopoly/Maps/TestMap.TestMap
+GlobalDefaultGameMode=/Game/Monopoly/Blueprints/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Monopoly/Maps/TestMap.TestMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
