SUPAAAAH UROTORA HYYPAAAA MIRAKURUU ROMANTIIIIIIIIIIIIIIIIKU

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Monopoly/Maps/TestMap.TestMap
-GlobalDefaultGameMode=/Game/Monopoly/Blueprints/BP_GameMode.BP_GameMode_C
-EditorStartupMap=/Game/Monopoly/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Monopoly/Maps/Menu/Menu.Menu
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Monopoly/Maps/Menu/Menu.Menu
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
