adds game end, also now it works in local multiplayer

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Monopoly/Maps/Menu/Menu.Menu
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 EditorStartupMap=/Game/Monopoly/Maps/Menu/Menu.Menu
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
