--- a/Monopoly_Normand_MP.uproject
+++ b/Monopoly_Normand_MP.uproject
@@ -11,6 +11,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorExtension",
+			"Enabled": true
 		}
 	]
 }
