--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,25 @@
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+; If using Sessions
+; bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Monopoly/Maps/Menu/Menu.Menu
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 EditorStartupMap=/Game/Monopoly/Maps/Menu/Menu.Menu
 bUseSplitscreen=False
+GameInstanceClass=/Game/Monopoly/Levels/AllLevels/MonopolyGameInstance.MonopolyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
