--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,78 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6C0EA0B84E189270ADAA0FA917AA34F4
+
+[Internationalization]
+-LocalizationPaths=%GAMEDIR%/Content/Localization/Game
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+BuildTarget=
+StagingDirectory=(Path="C:/Users/coren/Desktop")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=False
+bMakeBinaryConfig=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+bCompressed=True
+PakFileCompressionFormats=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PakFileAdditionalCompressionOptions=-compressionblocksize=256KB
+PakFileCompressionMethod=Kraken
+PakFileCompressionLevel_DebugDevelopment=3
+PakFileCompressionLevel_TestShipping=5
+PakFileCompressionLevel_Distribution=7
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=EFIGSCJK
+-CulturesToStage=en
++CulturesToStage=en
++CulturesToStage=fr-FR
++CulturesToStage=de-DE
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
+
